--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 TODO
-	Vectors
 	Terms that don't return strings
 	String handler / term strings
-	Expression 
+	Expression ***EXPEvalNumber/String fix***
 	Binary Operations.
 	
