--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 TODO:
-	Assignment test script.
-	Complex Variables / String derefenceing.
+	Complex Variables / String derefenceing (can be $0000)
 	Arrays.		
 	
 Changes:
