--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO:
-	Complex Variables / String derefenceing (can be $0000)
+	String variables
+	String derefenceing (can be $0000)
 	Arrays.		
 	
 Changes:
