--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ TODO:
 	Optimised 1-count FOR.	
 	CALL / ENDPROC (and scanner)
 	SYS
-	Input with cursor
+	Input / max length.
 	INPUT
 	LIST
 	POKE/DOKE/PEEK/DEEK
