--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 TODO:
-	Optimised 1-count FOR.	
+	Add F-Keys and ESC to MOS (Shift-ESC doesn't exit emulator)
+	EmScriptEn get it working ?
 	CALL / ENDPROC (and scanner)
-	Input / max length.
+	Input / max length / editable.
 	INPUT
 	LIST
 	INKEY$
