--- a/TODO
+++ b/TODO
@@ -1,7 +1,10 @@
 TODO:
-	EmScriptEn get it working ?
+	EmScriptEn
+		- bootable MOS
+		- running BASIC
 	CALL / ENDPROC (and scanner)
 	Input / max length / editable.
+	Command Line ?
 	INPUT
 	LIST
 	INKEY$
