--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 TODO:
+	Clear on edit, should reset READ/find procedures etc.
 	Design for "FlashFS".
 	Start Code Reading (on return from holiday)
 	Definitions in command line bug ?
