--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 TODO:
 	Clear on edit, should reset READ/find procedures etc.
 	Design for "FlashFS".
-	Start Code Reading (on return from holiday)
+	Complete Code Reading (on return from holiday)
 	Definitions in command line bug ?
 
 Outstanding (Implementation specific):
