--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 TODO:
 	Clear on edit, should reset READ/find procedures etc.
-	Design for "FlashFS".
+	Assembler file system.
 	Complete Code Reading (on return from holiday)
 	Definitions in command line bug ?
 
