--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 TODO:
-	Clear on edit, should reset READ/find procedures etc.
+	Auto-quote ' comments.
 	Assembler file system.
 	Complete Code Reading (on return from holiday)
 	Definitions in command line bug ?
