--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
 TODO:
 	Complete Code Reading (down to 66 files).
 
+Fixes:
 	Auto-quote ' comments as well as REM.
+	
 	Assembler file system.
 	Definitions in command line bug ?
 
