--- a/CHANGES
+++ b/CHANGES
@@ -1,15 +1,5 @@
 Changes
 =======
 
-9th June 2022
-
-BASIC: 	Fixed WHILE bug reported by Tsvetan.
-		Tokeniser now does REM for you (e.g. REM a comment will tokenise as REM "a comment")
-		CLEAR can take a parameter setting the highest memory value.
-		BASIC Code address dropped to $3400 and edtest made to work by pushing test code 4k up.
-		Implemented READ, RESTORE and DATA
-
-20th June 2022
-
-BASIC: 	Added GOTO, GOSUB and RETURN for old code. Will not work with editor.		
-		Variables cleared/Stack reset etc. after directly editing code.
+Still in alpha flux.
+Still codereading.
