--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO:
 	Complete Code Reading (down to 56 files).
-
+	List detokenises PRINT 22 as print22
+	
 Fixes:
 	Assembler file system.
 	Identifier Definitions in command line bug ?
