--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 TODO:
+	Screen editor.
 	Complete Code Reading (down to 56 files).
-	List detokenises PRINT 22 as print22
 	
 Fixes:
 	Assembler file system.
