--- a/TODO
+++ b/TODO
@@ -3,7 +3,8 @@ TODO:
 	
 Fixes:
 	Assembler file system.
-	No Ok on empty screen line.
+	Long REM (>= 128?) doesn't work, double quote ????
+	$constant not listing correctly (requires space too)
 	Identifier Definitions in command line bug ?
 
 Outstanding (Implementation specific):
