--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ Fixes:
 	Assembler file system.
 	Long REM example (>= 128?) doesn't work, double quote ????, encodes/decodes with python scripts
 	okay in memory (!)
+	.label doesn't work tokenising (is variable ???)
 	$constant not listing correctly (requires space too)
 	Identifier Definitions in command line bug ?
 
