--- a/TODO
+++ b/TODO
@@ -3,10 +3,12 @@ TODO:
 	
 Fixes:
 	Assembler file system.
-	Long REM example (>= 128?) doesn't work, double quote ????, encodes/decodes with python scripts
-	okay in memory (!)
-	.label doesn't work tokenising (is variable ???)
 	$constant not listing correctly (requires space too)
+
+	.label doesn't work tokenising (is variable ???)
+		- fix in python tokeniser
+		- fix in source
+		
 	Identifier Definitions in command line bug ?
 
 Outstanding (Implementation specific):
