--- a/TODO
+++ b/TODO
@@ -1,17 +1,10 @@
 TODO:
 	Complete Code Reading (down to 56 files).
+	Assembler file system.
 	
 Fixes:
-	Assembler file system.
-
-	.label doesn't work tokenising (is variable ???) 
-		- maybe alternate @label
-		- fix in python tokeniser
-		- fix in source
-		
+	tokenise stand alone .
 	Identifier Definitions in command line bug ?
-
-	ListPgm doesn't do shift.
 	
 Outstanding (Implementation specific):
 	EVENT/TIME (when timer available)
