--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO:
 	Complete Code Reading (down to 58 files).
 	Assembler file system.
+	Inline assembler
 	
 Fixes:
 	Identifier Definitions in command line bug ?
