--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ TODO:
 	Complete Code Reading (down to 58 files).
 	Assembler file system.
 		Directory
+		Erase
 		Read
 		Write
 	Python script to rip code out of memory.dump		
