--- a/TODO
+++ b/TODO
@@ -1,7 +1,13 @@
 TODO:
+	Expand MOS ($F000) and fix load address
+		- emulator
+		- makefiles
+		- javascript
+
 	Complete Code Reading (down to 58 files).
 
-	BASIC LOAD <file>,<addr>
+	BASIC LOAD <file>[,<addr>] using generated files.
+	
 	Loading real programs / JS test.
 
 	Assembler file system.
