--- a/CHANGES
+++ b/CHANGES
@@ -4,3 +4,7 @@ Changes
 4th July 2023
 =============
 	In beta, tracking changes here.
+
+5th July 2023
+=============
+	Reintroduced the scrolling input line editor for input_line
