--- a/TODO
+++ b/TODO
@@ -1,11 +1,12 @@
 TODO:
-
 	Shift locking ??
+	Rationalise IFloatStringToFloat (tokeniser and VAL())
+	Format with no command.
 	Star Trek	
 	Inline assembler
 
 Ongoing:
-	Complete Code Reading (currently 69 files).
+	Complete Code Reading (currently 70 files).
 	
 Fixes:
 	Identifier Definitions in command line bug ?
@@ -15,3 +16,4 @@ Outstanding (Implementation specific):
 	LOAD/SAVE (when flash r/w available)
 	Graphics stuff ?
 	Assembler stuff ?
+	Colour switching commands.
