--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ Ongoing:
 	Complete Code Reading (currently 70 files).
 	
 Fixes:
-	TRB zp/abs
+	Print tab off the right should go down.
 	Identifier Definitions in command line bug ?
 	
 Outstanding (Implementation specific):
