--- a/TODO
+++ b/TODO
@@ -1,16 +1,12 @@
 TODO:
-	FSRewrite
-		- save output data.
-		- re stress it.		
-		- random start for write ?
-
+	Random start for write ?
+	Print tab off the right should go down (e.g. CR)
 	Star Trek dogfood.
 
 Ongoing:
 	Complete Code Reading (currently 70 files).
 	
 Fixes:
-	Print tab off the right should go down.
 	Identifier Definitions in command line bug ?
 
 Outstanding (Implementation specific):
