--- a/CHANGES
+++ b/CHANGES
@@ -39,3 +39,7 @@ Changes
 10th July 
 =========
 	Converted display to 5x7 fonts.	
+
+13th July
+=========
+	Conversion towards Apple ][ compatible hardware.	
