Beta 4. Basic A2 operation

--- a/CHANGES
+++ b/CHANGES
@@ -43,3 +43,6 @@ Changes
 13th July
 =========
 	Conversion towards Apple ][ compatible hardware.	
+	Beta 4 very basic hardware (keyboard & text display @ $400)
+
+		
