Can boot Apple II

--- a/CHANGES
+++ b/CHANGES
@@ -45,4 +45,9 @@ Changes
 	Conversion towards Apple ][ compatible hardware.	
 	Beta 4 very basic hardware (keyboard & text display @ $400)
 
+14th July
+=========
+	MOS running on Apple 2 text mode
+	Apple II ROMs boot.
+		
 		
