--- a/TODO
+++ b/TODO
@@ -7,6 +7,9 @@ TODO:
 
 		mid$ with a start < 0 ?? should error.
 
+		Mode switch code. 
+		Switch on Apple ][ boot
+		
 Ongoing:
 	Complete Code Reading 
 	
