--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 TODO:
+	Palette on Marinus' code.
 	
 	Star Trek dogfood:
 		next on end of indented line doesn't work (indentation)
@@ -6,10 +7,7 @@ TODO:
 				array(x,y)  = 0:next:next
 
 		mid$ with a start < 0 ?? should error.
-
-		Mode switch code. 
-		Switch on Apple ][ boot
-		
+	
 Ongoing:
 	Complete Code Reading 
 	
